fix overflow problem, now the text is not cut. And other styles changes.

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -57,7 +57,6 @@ h1 {
     width: calc(100% - 20px);
     height: auto;
     font-size: 16px;
-    margin-bottom: 10px;
     margin-inline: 10px;
     border: 1px solid var(--border-color);
     border-radius: var(--border-radius);
@@ -107,7 +106,7 @@ h1 {
 /* Style for the actions block */
 .prompt-text {
     padding: 8px 0;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 /* Button styles */
@@ -170,18 +169,6 @@ select {
     border-radius: 4px;
 }
 
-.category-label:disabled {
-    -webkit-appearance: none;
-    /* For WebKit browsers (Chrome, Safari, etc.) */
-    -moz-appearance: none;
-    /* For Firefox */
-    appearance: none;
-    /* For modern browsers */
-    background-image: none;
-    /* Remove the default arrow icon */
-    color: var(--text-color);
-}
-
 .show-more {
     display: block;
     margin-top: 5px;
@@ -192,32 +179,4 @@ select {
 
 .show-more:hover {
     text-decoration: underline;
-}
-
-/* Tag styles */
-.tags-container {
-    display: flex;
-    justify-content: space-around;
-    gap: 5px;
-    margin-top: 10px;
-}
-
-.tag {
-    display: inline-block;
-    padding: 8px 12px;
-    border-bottom: 2px solid #ccc;
-    cursor: pointer;
-}
-
-.tag:hover {
-    background-color: #ddd;
-}
-
-.selected:hover {
-    background-color: var(--background-color);
-}
-
-.selected {
-    border-bottom: none;
-    font-weight: bold;
 }
